==> KitSprout/IMUCube/Software/IMUCube_Peripheral_ADC/Program/modules/module_serial.c <==
/*====================================================================================================*/
/*====================================================================================================*/
#include "module_serial.h"

#include "app_util_platform.h"
/*====================================================================================================*/
/*====================================================================================================*
**函數 : Serial_Config
**功能 : Serial Config
**輸入 : None
**輸出 : None
**使用 : Serial_Config();
**====================================================================================================*/
/*====================================================================================================*/
void Serial_Config( void )
{
  nrf_drv_uart_config_t uart_init_struct = {0};

  uart_init_struct.pseltxd            = UART0_CONFIG_PSEL_TXD;
  uart_init_struct.pselrxd            = UART0_CONFIG_PSEL_RXD;
  uart_init_struct.pselcts            = UART0_CONFIG_PSEL_CTS;
  uart_init_struct.pselrts            = UART0_CONFIG_PSEL_RTS;
  uart_init_struct.p_context          = NULL;
  uart_init_struct.hwfc               = UART0_CONFIG_HWFC;
  uart_init_struct.parity             = UART0_CONFIG_PARITY;
  uart_init_struct.baudrate           = UART0_CONFIG_BAUDRATE;
  uart_init_struct.interrupt_priority = UART0_CONFIG_IRQ_PRIORITY;
  nrf_drv_uart_init(&uart_init_struct, NULL);

  nrf_drv_uart_rx_enable();
}
/*====================================================================================================*/
/*====================================================================================================*
**函數 : Serial_SendByte
**功能 : Send Byte
**輸入 : SendByte
**輸出 : None
**使用 : Serial_SendByte('A');
**====================================================================================================*/
/*====================================================================================================*/
void Serial_SendByte( uint8_t sendByte )
{
  nrf_drv_uart_tx(&sendByte, 1);
}
/*====================================================================================================*/
/*====================================================================================================*
**函數 : Serial_SendData
**功能 : Send Data
**輸入 : *sendData, lens
**輸出 : None
**使用 : Serial_SendData(sendData, lens);
**====================================================================================================*/
/*====================================================================================================*/
void Serial_SendData( uint8_t *sendData, uint16_t lens )
{
  nrf_drv_uart_tx(sendData, lens);
}
/*====================================================================================================*/
/*====================================================================================================*
**函數 : Serial_SendStr
**功能 : Send String
**輸入 : *pWord
**輸出 : None
**使用 : Serial_SendStr("Hellow World!");
**====================================================================================================*/
/*====================================================================================================*/
void Serial_SendStr( char *pWord )
{
  uint8_t strLens = lenOfStr(pWord);
  nrf_drv_uart_tx((uint8_t*)pWord, strLens);
}
/*====================================================================================================*/
/*====================================================================================================*
**函數 : Serial_SendNum
**功能 : Send Number
**輸入 : type, lens, sendNum
**輸出 : None
**使用 : Serial_SendNum(Type_D, 6, 1024);
**====================================================================================================*/
/*====================================================================================================*/
void Serial_SendNum( StringType type, uint8_t lens, int32_t sendNum )
{
  char tmpStr[32] = {0};
  char *pWord = tmpStr;

  num2Str(type, lens, tmpStr, sendNum);
  nrf_drv_uart_tx((uint8_t*)pWord, lens);
}
/*====================================================================================================*/
/*====================================================================================================*
**函數 : Serial_RecvByte
**功能 : Recv Byte
**輸入 : *recvByte
**輸出 : None
**使用 : recvByte = Serial_RecvByte();
**====================================================================================================*/
/*====================================================================================================*/
uint8_t Serial_RecvByte( void )
{
  uint8_t recvByte = 0;
  nrf_drv_uart_rx(&recvByte, 1);
  return recvByte;
}
/*====================================================================================================*/
/*====================================================================================================*
**函數 : Serial_RecvData
**功能 : Recv Data
**輸入 : *recvData, lens
**輸出 : None
**使用 : Serial_RecvData(recvData, lens);
**====================================================================================================*/
/*====================================================================================================*/
void Serial_RecvData( uint8_t *recvData, uint16_t lens )
{
  nrf_drv_uart_rx(recvData, lens);
}
/*====================================================================================================*/
/*====================================================================================================*
**函數 : Serial_RecvDataWTO
**功能 : Recv Data Wait Timeout
**輸入 : *recvData, lens, timeoutMs
**輸出 : state
**使用 : state = Serial_RecvDataWTO(recvData, lens, timeoutMs);
**====================================================================================================*/
/*====================================================================================================*/
//int8_t Serial_RecvDataWTO( uint8_t *recvData, uint16_t lens, int32_t timeoutMs )
//{
//  return UART_RecvDataWTO(UARTx, recvData, lens, timeoutMs);
//}
/*====================================================================================================*/
/*====================================================================================================*
**函數 : Serial_RecvStr
**功能 : Recv String
**輸入 : *pWord
**輸出 : None
**使用 : Serial_RecvStr(recvStr);
**====================================================================================================*/
/*====================================================================================================*/
//void Serial_RecvStr( char *pWord )
//{
//  do {
//    UART_RecvByte(UARTx, (uint8_t*)pWord++);
//  } while(*(pWord-1) != '\0');
//  *pWord = '\0';
//}
/*====================================================================================================*/
/*====================================================================================================*
**函數 : Serial_RecvStrWTO
**功能 : Recv String Wait Timeout
**輸入 : *pWord, timeoutMs
**輸出 : State
**使用 : Serial_RecvStrWTO(RecvStr, 200);
**====================================================================================================*/
/*====================================================================================================*/
//int8_t Serial_RecvStrWTO( char *pWord, int32_t timeoutMs )
//{
//  int8_t state = ERROR;

//  do {
//    state = UART_RecvByteWTO(UARTx, (uint8_t*)pWord++, timeoutMs);
//    if(state == ERROR)
//      return ERROR;
//  } while(*(pWord-1) != '\0');
//  *pWord = '\0';

//  return SUCCESS;
//}
/*====================================================================================================*/
/*====================================================================================================*/
int fputc( int ch, FILE *f )
{
  uint8_t data = (uint8_t)ch;
  nrf_drv_uart_tx(&data, 1);
  return ch;
}
int fgetc( FILE *f )
{
  uint8_t data = 0;
  nrf_drv_uart_rx(&data, 1);
  return (uint8_t)data;
}
/*====================================================================================================*/
/*====================================================================================================*/
